--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial=1.0">
@@ -10,95 +11,126 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
-    
 
+<body>
     <header>
-      <div class="nav">
-          <ul>
-              <li class="Home"><a href="./Home.html">Home</a></li>
-              <li class="Sensor"><a href="./Sensor.html">Sensor</a></li>
-              <li class="About"><a href="./About.html">About</a></li>
-              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-              &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-              &emsp;&nbsp;&nbsp;&nbsp;&nbsp;
-             <li class="Logout"><a href="./login.html">Logout</a></li><i class="small material-icons">input</i>
-          </ul>
-      </div>
+        <div class="nav">
+            <ul>
+                <li class="Home"><a href="./Home.html">Home</a></li>
+                <li class="Sensor"><a href="./Sensor.html">Sensor</a></li>
+                <li class="About"><a href="./About.html">About</a></li>
+                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                &emsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="Logout"><a href="./login.html">Logout</a></li><i class="small material-icons">input</i>
+            </ul>
+        </div>
     </header>
     <div class="bg-image">
-     <div class="mainHome">
-        <div class="header">
-            <h1><img src="logo.png" alt="html5"width="70" height="70"/>&emsp;Weather Monitor System&emsp;<img src="logo.png" alt="html5"width="70" height="70"/></h1>
-            <h2>for your quality of life<br></h2>
+        <div class="mainHome">
+            <div class="header">
+                <h1><img src="logo.png" alt="html5" width="70" height="70" />&emsp;Weather Monitor System&emsp;<img
+                        src="logo.png" alt="html5" width="70" height="70" /></h1>
+                <h2>for your quality of life<br></h2>
+            </div>
+            <div class="picture">
+                <br><br><iframe width="495" height="272" src="https://www.youtube.com/embed/s0pe4sPcbm8"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="title">
+                <h3><br><br><img src="ideaicon.png" alt="html5" width="50"
+                        height="50" />&emsp;ที่มาเเละความสำคัญของโครงการ&emsp;<img src="ideaicon.png" alt="html5"
+                        width="50" height="50" /></h3>
+                <h4>(The importance of the project)</h4>
+            </div>
+            <div class="subtitle">
+                <p>
+                    ปัจจุบันอากาศของเรานั้นมีแต่ฝุ่นและมลพิษมากมายอีกทั้งสถาพอากาศที่ แปรปรวนส่งผลต่อสุขภาพของเราได้
+                    เราจึงได้คิดค้นโปรเจคของเราขึ้นมา<br>
+                    เพราะว่าในตอนนี้ฝุ่นละอองในอากาศบางพื้นที่อาจจะหนาแน่นเป็นอย่างมาก
+                    และ อาจเป็นอันตรายต่อสุขภาพจึงต้องมีการตรวจสอบและป้องกันอย่างถูกวิธี<br>
+                    อีกทั้งอุณภูมิที่เปลี่ยนไปอย่างรวดเร็ว
+                    ก็อาจจะส่งผลต่อร่างกายได้เช่นเดียวกัน จึงต้องมีการวัดค่าอุณภูมิแล้วบอกอย่าง Real time
+                    ว่าอุณภูมิตรงนั้นปกติหรือไม่<br>
+                    และทำการป้องกันได้อย่างเหมาะสม
+                </p>
+                <p>
+                    Today, our air has many dust and pollution, and the weather conditions Variations can affect our
+                    health.
+                    So we came up with our project.<br> Because now the dust in the air in some areas may be very dense.
+                    and may be harmful to health, therefore must be properly monitored<br> and prevented In addition,
+                    the temperature changes rapidly.
+                    It may affect the body as well. Therefore, the temperature must be measured <br>and then told in
+                    Real time whether the temperature there is normal or not.
+                    and make appropriate protectio
+            </div>
+            <div class="title">
+                <h3><br><br><img src="temicon.png" alt="html5" width="50"
+                        height="50" />&emsp;แล้วอุณหภูมิแบบไหนถึงจะเหมาะสมหล่ะ?&emsp;<img src="temicon.png" alt="html5"
+                        width="50" height="50" /></h3>
+            </div>
+            <div class="header">
+                <h1><br><img src="SoHot.jpg" alt="html5" width="500" height="300"><br></h1>
+            </div>
+            <div class="subtitle">
+                <p>
+                    อย่างที่กล่าวข้างต้นว่า Project ของเรานั้นเป็นการวัดอุณภูมิความชื้นและค่าฝุ่นเป็นหลัก
+                    ดังนั้นเราจึงจะมาดูกันว่าอุณภูมิเท่าไหร่ถึงจะพอดีกับเรา โดยปกติแล้วร่างกาย<br>
+                    ของมนุษย์เราจะมีอุณภูมิปกติอยู่ที่ 36 องศา และความชื้นที่ดีที่สุดสำหรับมนุษย์เราคือ 40-60% RH
+                    อย่างไรก็ตาม อุณภูมิในร่างกายจริงๆก็ขึ้นอยู่กับ เพศและอายุและ<br>
+                    ปัจจัยอื่นๆด้วย แต่จะอยู่ประมาณ 36.1-37.2 เป็นต้น ดังนั้นช่วงอุณภูมินี้จึงจะดีสำหรับร่างกายที่สุด
+                    แต่ว่าเรามีช่วง อากาศมาให้ดูด้วยว่าอุณภูมิช่วงไหนอากาศจะเป็นอย่างไร
+                <ul>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;<p4>อากาศร้อน (Hot)</p4>
+                    อุณหภูมิตั้งแต่ 35.0 – 39.9 องศาเซลเซียส<br>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;<p5>อากาศร้อนจัด (Very Hot)
+                    </p5> อุณหภูมิตั้งแต่ 40.0 องศาเซลเซียสขึ้นไป<br>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;<p1>อากาศเย็น (Cool)</p1>
+                    อุณหภูมิตั้งแต่ 18.0 – 22.9 องศาเซลเซียส<br>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;<p7>อากาศหนาว (Cold)</p7>
+                    อุณหภูมิตั้งแต่ 16.0 – 17.9 องศาเซลเซียส<br>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;<p6>อากาศหนาวมาก (Very
+                        Cold)</p6> อุณหภูมิตั้งแต่ 8.0 – 15.9 องศาเซลเซียส
+                </ul>
+
+                </p>
+            </div>
+            <div class="title">
+                <h3><br><br><img src="dusticon.png" alt="html5" width="50"
+                        height="50" />&emsp;แล้วค่าฝุ่นต้องเท่าไหร่ถึงจะปลอดภัย?&emsp;<img src="dusticon.png"
+                        alt="html5" width="50" height="50" /></h3>
+            </div>
+            <div class="header">
+                <h1><br><img src="p.m 2.5.jpg" alt="html5" width="500" height="300"><br></h1>
+            </div>
+            <div class="subtitle">
+                <p>
+                    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;โดยค่าฝุ่นเราจะวัดตามหน่วย AQI
+                    ซึ่งแต่ละระดับจะมีความอันตรายที่แตกต่างกันและสีที่แตกต่างกันดังนี้
+                <ul>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;0 - 25 AQI : <p1>Blue</p1>
+                    : คุณภาพอากาศดีมาก เหมาะสำหรับกิจกรรมกลางแจ้งและการท่องเที่ยว<br>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;26 - 50 AQI :<p2>Green</p2>
+                    : คุณภาพอากาศดี สามารถทำกิจกรรมกลางแจ้งและการท่องเที่ยวได้ตามปกติ<br>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;51 - 100 AQI :<p3>Yellow
+                    </p3> : สามารถทำกิจกรรมกลางแจ้งได้ตามปกติ หากมีอาการเบื้องต้น เช่น ไอ หายใจลำบาก ระคายเคืองตา
+                    ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง<br>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;101 - 200 AQI :<p4>Orange
+                    </p4> : ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น<br>
+                    <img src="direc001.png" alt="html5" width="25" height="25" />&nbsp;&nbsp;201 - 300 AQI :<p5>Red</p5>
+                    : ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งหลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง
+                    หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น<br> <br> <br>
+                </ul>
+                </p>
+            </div>
         </div>
-        <div class="picture">
-            <br><br><iframe width="421.33" height="237" src="https://www.youtube.com/embed/Fz9nWD_0jLE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
-        </div>
-        <div class="title">
-            <h3><br><br><img src="ideaicon.png" alt="html5"width="50" height="50"/>&emsp;ที่มาเเละความสำคัญของโครงการ&emsp;<img src="ideaicon.png" alt="html5"width="50" height="50"/></h3>
-            <h4>(The importance of the project)</h4>
-        </div> 
-        <div class="subtitle">
-            <p>
-                ปัจจุบันอากาศของเรานั้นมีแต่ฝุ่นและมลพิษมากมายอีกทั้งสถาพอากาศที่ แปรปรวนส่งผลต่อสุขภาพของเราได้
-                เราจึงได้คิดค้นโปรเจคของเราขึ้นมา<br> เพราะว่าในตอนนี้ฝุ่นละอองในอากาศบางพื้นที่อาจจะหนาแน่นเป็นอย่างมาก
-                และ อาจเป็นอันตรายต่อสุขภาพจึงต้องมีการตรวจสอบและป้องกันอย่างถูกวิธี<br> อีกทั้งอุณภูมิที่เปลี่ยนไปอย่างรวดเร็ว
-                ก็อาจจะส่งผลต่อร่างกายได้เช่นเดียวกัน จึงต้องมีการวัดค่าอุณภูมิแล้วบอกอย่าง Real time ว่าอุณภูมิตรงนั้นปกติหรือไม่<br>
-                และทำการป้องกันได้อย่างเหมาะสม
-            </p>
-            <p>
-                Today, our air has many dust and pollution, and the weather conditions Variations can affect our health.
-                So we came up with our project.<br> Because now the dust in the air in some areas may be very dense.
-                and may be harmful to health, therefore must be properly monitored<br> and prevented In addition, the temperature changes rapidly.
-                It may affect the body as well. Therefore, the temperature must be measured <br>and then told in Real time whether the temperature there is normal or not.
-                and make appropriate protectio
-        </div>
-        <div class="title">
-            <h3><br><br><img src="temicon.png" alt="html5"width="50" height="50"/>&emsp;แล้วอุณหภูมิแบบไหนถึงจะเหมาะสมหล่ะ?&emsp;<img src="temicon.png" alt="html5"width="50" height="50"/></h3>
-        </div>
-        <div class="header">
-            <h1><br><img src="SoHot.jpg"alt="html5"width="500" height="300"><br></h1>
-        </div>
-        <div class="subtitle">
-            <p>
-                อย่างที่กล่าวข้างต้นว่า Project ของเรานั้นเป็นการวัดอุณภูมิความชื้นและค่าฝุ่นเป็นหลัก ดังนั้นเราจึงจะมาดูกันว่าอุณภูมิเท่าไหร่ถึงจะพอดีกับเรา โดยปกติแล้วร่างกาย<br>
-                ของมนุษย์เราจะมีอุณภูมิปกติอยู่ที่ 36 องศา และความชื้นที่ดีที่สุดสำหรับมนุษย์เราคือ 40-60% RH อย่างไรก็ตาม อุณภูมิในร่างกายจริงๆก็ขึ้นอยู่กับ เพศและอายุและ<br>
-                ปัจจัยอื่นๆด้วย แต่จะอยู่ประมาณ 36.1-37.2 เป็นต้น ดังนั้นช่วงอุณภูมินี้จึงจะดีสำหรับร่างกายที่สุด แต่ว่าเรามีช่วง อากาศมาให้ดูด้วยว่าอุณภูมิช่วงไหนอากาศจะเป็นอย่างไร
-              <ul>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p4>อากาศร้อน (Hot)</p4> อุณหภูมิตั้งแต่ 35.0 – 39.9 องศาเซลเซียส<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p5>อากาศร้อนจัด (Very Hot)</p5> อุณหภูมิตั้งแต่ 40.0 องศาเซลเซียสขึ้นไป<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p1>อากาศเย็น (Cool)</p1> อุณหภูมิตั้งแต่ 18.0 – 22.9 องศาเซลเซียส<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p7>อากาศหนาว (Cold)</p7> อุณหภูมิตั้งแต่ 16.0 – 17.9 องศาเซลเซียส<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;<p6>อากาศหนาวมาก (Very Cold)</p6> อุณหภูมิตั้งแต่ 8.0 – 15.9 องศาเซลเซียส
-             </ul>
-            
-            </p>
-        </div>
-        <div class="title">
-            <h3><br><br><img src="dusticon.png" alt="html5"width="50" height="50"/>&emsp;แล้วค่าฝุ่นต้องเท่าไหร่ถึงจะปลอดภัย?&emsp;<img src="dusticon.png" alt="html5"width="50" height="50"/></h3>
-        </div>
-        <div class="header">
-            <h1><br><img src="p.m 2.5.jpg"alt="html5"width="500" height="300"><br></h1>
-        </div>
-        <div class="subtitle">  
-            <p>
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;โดยค่าฝุ่นเราจะวัดตามหน่วย AQI ซึ่งแต่ละระดับจะมีความอันตรายที่แตกต่างกันและสีที่แตกต่างกันดังนี้
-              <ul>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;0 - 25 AQI   : <p1>Blue</p1> : คุณภาพอากาศดีมาก เหมาะสำหรับกิจกรรมกลางแจ้งและการท่องเที่ยว<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;26 - 50 AQI   :<p2>Green</p2> : คุณภาพอากาศดี สามารถทำกิจกรรมกลางแจ้งและการท่องเที่ยวได้ตามปกติ<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;51 - 100	AQI  :<p3>Yellow</p3> : สามารถทำกิจกรรมกลางแจ้งได้ตามปกติ หากมีอาการเบื้องต้น เช่น ไอ หายใจลำบาก ระคายเคืองตา ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง<br>
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;101 - 200 AQI :<p4>Orange</p4> : ควรลดระยะเวลาการทำกิจกรรมกลางแจ้ง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น<br> 
-                <img src="direc001.png" alt="html5"width="25" height="25"/>&nbsp;&nbsp;201 - 300 AQI :<p5>Red</p5> : ทุกคนควรหลีกเลี่ยงกิจกรรมกลางแจ้งหลีกเลี่ยงพื้นที่ที่มีมลพิษทางอากาศสูง หรือใช้อุปกรณ์ป้องกันตนเองหากมีความจำเป็น<br> <br> <br>  
-             </ul>
-            </p>
-        </div>
-      </div>
-    </div>
 </body>
+
 </html>
